fix: add grid gap and padding

--- a/planning/colors/css/medium.css
+++ b/planning/colors/css/medium.css
@@ -1,7 +1,11 @@
 @media only screen and (min-width: 32.5em) {
     /*--- Cards Position ---*/
+    main {
+        grid-gap: 15px;
+    }
     .heading {
         grid-column: 1/3;
+        height: 150px;
     }
     .color-nav {
         grid-column: 3/4;
